# comfyui_mcp

./: .gitignore  .mcp.json.example  CLAUDE.md  IMPROVEMENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
custom_nodes/comfyui-mcp-bridge/: __init__.py
custom_nodes/comfyui-mcp-bridge/web/: mcp_bridge.js
skills/comfyui-image-quality/: SKILL.md
skills/comfyui-mask-strategy/: SKILL.md
skills/comfyui-pose-editing/: SKILL.md
skills/find-loras/: SKILL.md
skills/prompt-flux/: SKILL.md
skills/prompt-flux/references/: anti-ai-slop.md  cinematography.md  enrichment-palette.md  model-variants.md  specificity-upgrades.md
skills/prompt-illustrious/: README.md  SKILL-pony.md  SKILL.md  extract_danbooru_tag.py  tags.txt
skills/prompt-illustrious/refs/: README.md
skills/prompt-krea2/: SKILL.md
skills/prompt-krea2/references/: enrichment-palette.md  model-variants.md
skills/prompt-ltx/: SKILL.md
skills/prompt-ltx/references/: audio-prompting.md  camera-control-loras.md  enrichment-palette.md  model-variants.md  official-prompt-structure.md  resolution-and-duration.md
skills/prompt-qwen/: SKILL.md
skills/prompt-qwen/references/: bilingual-and-multilingual.md  editing-instructions.md  (+3 more)
skills/prompt-wan/: SKILL.md
skills/prompt-zimage/: SKILL.md
src/comfyui_mcp/: civitai.py  client.py  comfy.py  convert.py  core.py  images.py  logs.py  loras.py  model_meta.py  search.py  server.py  snapshots.py  summarize.py  tabs.py  widgets.py
tests/: README.md  test_convert.py  test_core.py  test_images.py
tests/fixtures/: subgraph_zimage_t2i.json
(+106 files in other folders)
