[project]
name = "comfyui-mcp"
version = "0.0.1"
description = "MCP server for inspecting, editing, and running ComfyUI workflows from a coding agent"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "pillow>=10.0",
    "psutil>=5.9",
]

[project.scripts]
comfyui-mcp = "comfyui_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comfyui_mcp"]
